sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: not found: value lenght
  for (k<- 0 to lenght-2){
                ^