sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  for (k<- 0 to lenght-2){
    if ( k >= k+1){
      echange(k,k+1)
    }
  }
}